--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <title>Rock-Paper-Scissors</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="#" type="text/css">
+   <!--  <link rel="stylesheet" href="style.css" type="text/css"> -->
 </head>
 <body>
-    <script scr="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
